Fixed text alignment

--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -124,7 +124,6 @@ h3 {
 
 .section__title--intro {
   font-weight: var(--fw-reg);
-  text-align: center;
   width: 952px;
 }
 
@@ -135,10 +134,6 @@ h3 {
 .section__subtitle {
   margin-top: 5em;
   font-size: var(--fs-h3);
-}
-
-.section__subtitle--intro {
-  text-align: center;
 }
 
 .section__subtitle--intro,
@@ -268,6 +263,7 @@ header {
 
 .intro {
   position: relative;
+  text-align: center;
 }
 
 .intro__img {
@@ -301,7 +297,7 @@ header {
     align-self: start;
     grid-column: -1 / 1;
     grid-row: 2;
-    text-align: right;
+    text-align: center;
     position: relative;
     left: -1.5em;
     width: calc(100% + 1.5em);
